--- a/Cmakelists.txt
+++ b/Cmakelists.txt
@@ -1,9 +1,9 @@
 # 设置CMake最低版本要求  
-cmake_minimum_required(VERSION 3.10)  
-  
+cmake_minimum_required(VERSION 3.10)
+
 # 设置项目名称  
 project(leetcode_practice-Cplus)  
-  
+
 # 设置C++标准  
 set(CMAKE_CXX_STANDARD 17)  
 set(CMAKE_CXX_STANDARD_REQUIRED ON)  
@@ -12,7 +12,7 @@ file(GLOB cpp_files "*.cpp")
 # message("ALL cpp files are ${cpp_files}")
 
 # 添加源文件列表
-# add_executable(main main.cpp function.cpp data_structure.cpp WidthOfBinaryTree.cpp)
-add_executable(main ${cpp_files})
+add_executable(main main.cpp function.cpp data_structure.cpp IsValidBST.cpp)
+# add_executable(main ${cpp_files})
 
-set_target_properties(main PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
+# set_target_properties(main PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
